tests/golden/type_errors/contextual_lambda_fallthrough.cd
let f: fun(number): number = fun (x) {
  print x;
};
