tests/golden/type_errors/contextual_lambda_fallthrough.err
Type error at 1:30: function `<lambda>` may return nil but is annotated number
  let f: fun(number): number = fun (x) {
                               ^
